# grasping-Dexnet

grasping-master/: README.md
grasping-master/src/bbox_ex_msgs/: CMakeLists.txt
grasping-master/src/bbox_ex_msgs/msg/: BoundingBox.msg  BoundingBoxes.msg  GR_img.msg  GRconvnet.msg  RGBD.msg
grasping-master/src/gqcnn-master/: .gitignore  CMakeLists.txt  package.xml  requirements.txt
grasping-master/src/gqcnn-master/cfg/: train_dex-net_2.0.yaml
grasping-master/src/gqcnn-master/cfg/examples/: gqcnn_pj.yaml
grasping-master/src/gqcnn-master/data/result/: result.txt
grasping-master/src/gqcnn-master/examples/: policy.py  policy_dataset.py  policy_ros.py
grasping-master/src/gqcnn-master/gqcnn/grasping/: actions.py  grasp.py  image_grasp_sampler.py
grasping-master/src/gqcnn-master/gqcnn/model/: __init__.py
grasping-master/src/gqcnn-master/gqcnn/utils/: enums.py  utils.py
grasping-master/src/gqcnn-master/launch/: grasp_planning_service.launch  primesense.launch
grasping-master/src/gqcnn-master/roboticgrasping/: run_calibration.py  run_grasp_generator.py  run_offline.py  run_offline_dataset.py  run_realtime.py  train_network.py  try.py
grasping-master/src/gqcnn-master/roboticgrasping/hardware/: camera.py
grasping-master/src/gqcnn-master/ros_nodes/: feedback.py  grasp_planner_node.py  grasp_space.txt  test.py  transformation_node.py
grasping-master/src/gqcnn-master/scripts/training/: train_dex-net_2.0.sh
grasping-master/src/gqcnn-master/test_model/GQCNN-2.0/: checkpoint  (+17 more)
grasping-master/src/gqcnn-master/tools/: plot_training_losses.py  run_policy.py
(+29 files in other folders)
